# mobile-resale-value

./: .dockerignore  Dockerfile  LICENSE  README.md  app.py  demo.py  pyproject.toml  requirements.txt  setup.py  template.py
artifacts/data_ingestion/ingested/: test.csv  train.csv
artifacts/data_transformation/transformed/: test.npy  train.npy
artifacts/data_transformation/transformed_object/: preprocessor.pkl
artifacts/model_evaluation/: report.yaml
artifacts/model_pusher/: model.pkl
mobile_resale_value/constants/: __init__.py
mobile_resale_value/exception/: __init__.py
mobile_resale_value/logger/: __init__.py
notebook/: data.csv  mongoDB_demo.ipynb
src/components/: data_ingestion.py  data_transformation.py  model_evaluation.py  model_pusher.py  model_trainer.py
src/configuration/: mongo_db_connection.py
src/constants/: __init__.py
src/entity/: artifact_entity.py  config_entity.py
src/exception/: __init__.py
src/logger/: __init__.py
src/pipeline/: prediction_pipeline.py  training_pipeline.py
